2006-04-24  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/ws2tcpip.h (gai_strerror): Remove thread-safety comment.
	This function cannot be made thread-safe, the API would have to be
	changed for that, just like strerror() -> strerror_r() and similar
	ISO C or POSIX functions...

2006-04-19  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/edevdefs.h: New file.

2006-04-19  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/mmsystem.h (_LPCWAVEFORMATEX_DEFINED): Define.
	Use as guard for the WAVEFORMATEX structure instead of
	_WAVEFORMATEX_ to avoid clashes with DirectSound. Keep
	_WAVEFORMATEX_ for compatibility.
	Thanks to:    Andrew Jones <guln at sf dot net>

2006-04-19  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winuser.h (CharNextEx,CharNextExW,CharPrevEx,CharPrevExW):
	Delete. Only CharNextExA and CharPrevExA are documented in MSDN.
	Thanks to:    David Golub <david_golub at sf dot net>

2006-04-18  Eric House  <ehouse@eehouse.org>

	PocketPC support.
	* include/aygshell.h: New file [_WIN32_WCE]. Declare most common
	functions for using aygshell on PocketPC:
	SHCreateMenuBar, SHFindMenuBar, SHCreateNewItem, SHFullScreen,
	SHSipInfo, SHHandleWMActivate, SHHandleWMSettingChange

	* include/commctrl.h [_WIN32_WCE] Add function prototypes for
	command bar API on PocketPC:
	CommandBar_Create, CommandBar_Show, CommandBar_AddBitmap,
	CommandBar_InsertComboBox, CommandBar_InsertMenubar,
	CommandBar_InsertMenubarEx, CommandBar_DrawMenuBar,
	CommandBar_GetMenu, CommandBar_AddAdornments, CommandBar_Height,
	CommandBar_InsertButton, CommandBar_Destroy.

	* include/winbase.h [_WIN32_WCE] (WIN32_FIND_DATA{A|W}): Remove
	fields not present on PocketPC.
	(GetCurrentThreadId): Conditionally declare as extern function
	without dllimport attribute on PocketPC.
 	(ResetEvent): Likwise.
	(SetEvent): Likewise.

	* include/wingdi.h [_WIN32_WCE]  (GetTextExtentPoint32{A|W}):