@@ -939,7 +939,7 @@ typedef struct _MEMORYSTATUSEX {
 	DWORDLONG ullTotalVirtual;
 	DWORDLONG ullAvailVirtual;
 	DWORDLONG ullAvailExtendedVirtual;
-} MEMORYSTATUSEX, *LPMEMORYSTATUSEX;
+} MEMORYSTATUSEX,*LPMEMORYSTATUSEX;
 #endif
 typedef struct _LDT_ENTRY {
 	WORD LimitLow;
@@ -1134,6 +1134,9 @@ WINBASEAPI BOOL WINAPI CallNamedPipeW(LPCWSTR,PVOID,DWORD,PVOID,DWORD,PDWORD,DWO
 WINBASEAPI BOOL WINAPI CancelDeviceWakeupRequest(HANDLE);
 WINBASEAPI BOOL WINAPI CancelIo(HANDLE);
 WINBASEAPI BOOL WINAPI CancelWaitableTimer(HANDLE);
+#if (_WIN32_WINNT >= 0x0500)
+WINBASEAPI BOOL WINAPI ChangeTimerQueueTimer(HANDLE,HANDLE,ULONG,ULONG);
+#endif
 #if (_WIN32_WINNT >= 0x0501)
 WINBASEAPI BOOL WINAPI CheckNameLegalDOS8Dot3A(LPCSTR,LPSTR,DWORD,PBOOL,PBOOL);
 WINBASEAPI BOOL WINAPI CheckNameLegalDOS8Dot3W(LPCWSTR,LPSTR,DWORD,PBOOL,PBOOL);
@@ -1953,6 +1956,7 @@ WINBASEAPI BOOL WINAPI UnlockFileEx(HANDLE,DWORD,DWORD,DWORD,LPOVERLAPPED);
 #define UnlockSegment(w) GlobalUnfix((HANDLE)(w)) /* Obsolete: Has no effect. */
 WINBASEAPI BOOL WINAPI UnmapViewOfFile(PVOID);
 #if (_WIN32_WINNT >= 0x0500)
+WINBASEAPI BOOL WINAPI UnregisterWait(HANDLE);
 WINBASEAPI BOOL WINAPI UnregisterWaitEx(HANDLE,HANDLE);
 #endif
 WINBASEAPI BOOL WINAPI UpdateResourceA(HANDLE,LPCSTR,LPCSTR,WORD,PVOID,DWORD);
@@ -2397,6 +2401,7 @@ typedef PCACTCTXA PCACTCTX;
 #define WriteProfileString WriteProfileStringA
 #endif
 #endif
+
 #ifdef __cplusplus
 }
 #endif
