@@ -1,3 +1,13 @@
+2006-04-28  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>
+
+	* include/ipifcons.h (MIN_IF_TYPE,IF_TYPE_*,MAX_IF_TYPE,IF_ACCESS_*,
+	IF_CHECK_*,IF_CONNECTION_*,IF_ADMIN_*,IF_OPER_*): Define.
+	* include/winbase.h (CancelWaitableTimer,UnregisterWait):
+	Add function declaration.
+	* include/mgm.h: New file.
+	* lib/rtm.def: New file.
+	Thanks to:    Bruce M Simpson <bms_spc at sf dot net>
+
 2006-04-24  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>
 
 	* include/ws2tcpip.h (gai_strerror): Remove thread-safety comment.
